--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,237 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/backgroundgrad"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/TextoBienvenida"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Conversor de temperaturas"
+        android:layout_centerHorizontal="true"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_marginTop="120dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/TextoInstruccion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/TextoBienvenida"
+        android:text="Ingrese la temperatura a convertir:"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="50dp"
+        />
+
+    <EditText
+        android:id="@+id/IngresarGrados"
+        android:layout_width="250dp"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_height="30dp"
+        android:layout_below="@+id/TextoInstruccion"
+        android:layout_marginLeft="22dp"
+        android:background="@drawable/fieldsdesign"
+        android:textAlignment="center"
+        />
+
+    <TextView
+        android:id="@+id/Text3"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="De:"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/contenedorbtn"
+        android:padding="10dp"
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        android:textSize="22sp"
+        />
+
+    <TextView
+        android:id="@+id/TempOriginal"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="..."
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/Text3"
+        android:paddingTop="5dp"
+        android:textStyle="bold"
+        android:textSize="22sp"
+        />
+
+    <!-- BOTONES -->
+   <LinearLayout
+       android:id="@+id/contenedorbtn"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_below="@+id/IngresarGrados"
+       >
+
+       <Button
+           android:id="@+id/btnKelvin"
+           android:layout_width="120dp"
+           android:layout_height="42dp"
+           android:layout_below="@+id/IngresarGrados"
+           android:layout_marginTop="30dp"
+           android:layout_marginLeft="10dp"
+           android:textColor="@color/black"
+           android:backgroundTint="@color/white"
+           android:text="@string/gradostype1"
+           />
+
+       <Button
+           android:id="@+id/btnCelcius"
+           android:layout_width="120dp"
+           android:layout_height="42dp"
+           android:layout_below="@+id/IngresarGrados"
+           android:layout_marginTop="30dp"
+           android:layout_marginLeft="10dp"
+           android:layout_toRightOf="@+id/btnKelvin"
+           android:textColor="@color/black"
+           android:backgroundTint="@color/white"
+           android:text="@string/gradostype2"
+           />
+
+       <Button
+           android:id="@+id/btnFarenheit"
+           android:layout_width="120dp"
+           android:layout_height="42dp"
+           android:layout_below="@+id/IngresarGrados"
+           android:layout_marginTop="30dp"
+           android:layout_marginLeft="10dp"
+           android:layout_toRightOf="@+id/btnCelcius"
+           android:textColor="@color/black"
+           android:backgroundTint="@color/white"
+           android:text="@string/gradostype3"
+           />
+
+   </LinearLayout>
+
+    <!-- CONTENEDORES DE RESULTADOS -->
+    <LinearLayout
+        android:id="@+id/resultadosConts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TempOriginal"
+        android:orientation="horizontal"
+        >
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <!-- RESULTADO 1 -->
+        <LinearLayout
+            android:id="@+id/uno"
+            android:visibility="gone"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/fieldsdesign">
+
+            <TextView
+                android:id="@+id/Conversion1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Resultado 1"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@+id/btnKelvin"
+                android:textAlignment="center"
+                />
+
+            <TextView
+                android:id="@+id/res1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="..."
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@+id/btnKelvin"
+                android:textAlignment="center"
+                />
+        </LinearLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <!-- RESULTADO 2 -->
+        <LinearLayout
+            android:id="@+id/dos"
+            android:visibility="gone"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_toRightOf="@+id/uno"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/fieldsdesign">
+
+            <TextView
+                android:id="@+id/Conversion2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Resultado 2"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@+id/btnKelvin"
+                android:textAlignment="center"
+                />
+
+            <TextView
+                android:id="@+id/res2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="..."
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@+id/btnKelvin"
+                android:textAlignment="center"
+                />
+        </LinearLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textfinal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/resultadosConts"
+        android:text="Hecho por Lizzz"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        />
+
+</RelativeLayout>
