--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lilac">#EAD5FB</color>
+    <color name="babyblue">#D3ECFF</color>
+    <color name="azulbg">#98cfe5</color>
+    <color name="rojobg">#ec1f47</color>
+    <color name="naranjabg">#fbad07</color>
 </resources>
