--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -29,11 +29,10 @@
         android:id="@+id/Loading"
         android:layout_width="285dp"
         android:layout_height="48dp"
+        android:layout_below="@id/animationView"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
         android:max="100"
         android:progress="40"
-        android:textAlignment="center"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/animationView"
-        android:layout_marginTop="10dp"
-        />
+        android:textAlignment="center" />
 </RelativeLayout>
